<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.tlaplus</groupId>
  <artifactId>hardening</artifactId>
  <version>0.1.0-SNAPSHOT</version>

  <name>FuzzTLA</name>
  <description>Tools for synthesizing TLA+ specifications to harden model checkers.</description>
  <url>https://github.com/tlaplus/model-checker-hardening</url>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>Licensed under either Apache-2.0 or MIT, at your option.</comments>
    </license>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/license/mit</url>
      <distribution>repo</distribution>
      <comments>Licensed under either Apache-2.0 or MIT, at your option.</comments>
    </license>
  </licenses>

  <properties>
    <apalache.facade.version>0.62.3-SNAPSHOT</apalache.facade.version>
    <apalache.release.archive.sha256>765f610537281a0f25b8c30f2554f19523e2859c824e80e62276653ee23c10e2</apalache.release.archive.sha256>
    <apalache.release.version>0.62.2</apalache.release.version>
    <download-maven-plugin.version>1.9.0</download-maven-plugin.version>
    <gson.version>2.14.0</gson.version>
    <jackson.version>2.20.2</jackson.version>
    <junit.version>6.1.3</junit.version>
    <maven-shade-plugin.version>3.6.2</maven-shade-plugin.version>
    <maven.compiler.release>25</maven.compiler.release>
    <picocli.version>4.7.7</picocli.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <slf4j.version>2.0.18</slf4j.version>
    <sqlite-jdbc.version>3.53.4.0</sqlite-jdbc.version>
    <tla2tools.version>1.8.0-SNAPSHOT</tla2tools.version>
    <tomlj.version>1.1.1</tomlj.version>
    <vavr.version>1.0.1</vavr.version>
  </properties>

  <repositories>
    <repository>
      <id>central-portal-snapshots</id>
      <name>Central Portal Snapshots</name>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <dependencies>
    <!-- The tla2tools snapshot uses its vendored Gson version but omits it from its POM. -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-cbor</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>${picocli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apalache-mc</groupId>
      <artifactId>tla-io-java</artifactId>
      <version>${apalache.facade.version}</version>
    </dependency>
    <dependency>
      <groupId>org.lamport</groupId>
      <artifactId>tla2tools</artifactId>
      <version>${tla2tools.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.sun.mail</groupId>
          <artifactId>mailapi</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.vavr</groupId>
      <artifactId>vavr</artifactId>
      <version>${vavr.version}</version>
    </dependency>
    <!-- Binds SLF4J, which the Apalache facade and sqlite-jdbc use, to its no-op provider
         explicitly, so that loading it does not warn about a missing provider. -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>${sqlite-jdbc.version}</version>
    </dependency>
    <dependency>
      <groupId>org.tomlj</groupId>
      <artifactId>tomlj</artifactId>
      <version>${tomlj.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>fuzztla</finalName>
    <plugins>
      <plugin>
        <groupId>com.googlecode.maven-download-plugin</groupId>
        <artifactId>download-maven-plugin</artifactId>
        <version>${download-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>download-apalache-release</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>wget</goal>
            </goals>
            <configuration>
              <url>https://github.com/apalache-mc/apalache/releases/download/v${apalache.release.version}/apalache-${apalache.release.version}.tgz</url>
              <unpack>true</unpack>
              <outputDirectory>${project.build.directory}/apalache-release</outputDirectory>
              <sha256>${apalache.release.archive.sha256}</sha256>
              <alwaysVerifyChecksum>true</alwaysVerifyChecksum>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>stage-apalache-release</id>
            <phase>process-resources</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}</outputDirectory>
              <resources>
                <resource>
                  <directory>${project.build.directory}/apalache-release/apalache-${apalache.release.version}/lib</directory>
                  <includes>
                    <include>apalache.jar</include>
                  </includes>
                  <filtering>false</filtering>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <forceCreation>true</forceCreation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.6</version>
        <configuration>
          <!-- sqlite-jdbc loads its native library through JNI. -->
          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${maven-shade-plugin.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                    <exclude>META-INF/*.SF</exclude>
                  </excludes>
                </filter>
              </filters>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>io.github.tlaplus.hardening.Main</mainClass>
                  <manifestEntries>
                    <Implementation-Title>${project.name}</Implementation-Title>
                    <Implementation-Version>${project.version}</Implementation-Version>
                    <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
                  </manifestEntries>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
